--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Devf app</string>
     <string name="title_activity_main">MainActivity</string>
     <string name="action_files">Shared Files</string>
+    <string name="action_events">Events</string>
 </resources>
